--- a/public/index.html
+++ b/public/index.html
@@ -33,14 +33,11 @@
     </nav>
 <!-- Main Display #1 -->
   <section class="bg-gray-100 h-screen bg-center bg-cover">
-  <div class="container mx-auto h-screen w-full flex flex-col lg:px-2 px-0 py-18 lg:py-36 2xl:py-64 items-center">
-      <div class="text-center w-full">
-      <h1 class="text-8xl text-center font-body text-gray-800 mb-10 uppercase">Drew</h1>
-      <div class="center w-full mb-10">
-        <div class="animate-wiggle">
-          <a href="about.html"><img class="h-36 md:h-36" src="./images/Head3.png"></img>
+  <div class="container mx-auto h-screen w-full flex flex-col lg:px-2 px-0 py-18 lg:py-36 2xl:py-64 justify-center items-center">
+      <h1 class="text-8xl text-center font-body text-gray-800 uppercase mb-10">Drew</h1>
+      <div class="rounded-full w-36 h-36 md:w-36 md:h-36 flex items-center justify-center bg-yellow-300 animate-wiggle pl-6 mb-10">
+          <a href="about.html"><img class="object-scale-down h-36 md:h-36" src="./images/Head3.png"></img>
           </a>
-        </div>
       </div>
       <h3 class="text-3xl text-center font-body text-gray-800 uppercase">Analytical Business Strategist</h3>
       <p class="text-sm font-body pb-12 lg:pb-20">(FOR CREATORS)</p>
@@ -49,7 +46,6 @@
             <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
           </svg>
         </div>
-      </div>
   </div>
   </section>
   <!--Skill Set-->
@@ -177,7 +173,7 @@
     </div>
   -->
     <footer class="text-gray-600 border-t border-gray-200">
-          <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+          <div class="container px-5 py-4 mx-auto flex items-center sm:flex-row flex-col">
             <a class="flex title-font font-body items-center md:justify-start justify-center text-gray-900">
               <!--SVG Icon Placeholder-->
               <span class="ml-3 text-xl font-extralight">Drew</span>
