--- a/public/about.html
+++ b/public/about.html
@@ -31,16 +31,16 @@
     </div> 
     </nav>
     <!--A Bit About Myself Copy (Row Version)-->
-    <!--<section class="bg-white bg-center lg:h-screen center">
-        <div class="container mx-auto mb-16 flex px-5 py-24 md:flex-nowrap flex-wrap">
+    <section class="bg-gray-100 bg-center lg:h-screen center">
+        <div class="container mx-auto mb-16 flex px-5 py-12 md:flex-nowrap flex-wrap">
           <div class="lg:w-4/5 md:w-1/2 flex p-10 items-center justify-start relative">
-            <img class="object-cover object-center rounded" alt="hero" src="./images/Drew4.png">
+            <img class="object-cover object-center" alt="hero" src="./images/Drew4.png">
           </div>
-          <div class="lg:flex-grow md:w-1/2 lg:pl-24 pt-8 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+          <div class="lg:flex-grow md:w-2/5 lg:pl-24 pt-8 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <h1 class="font-body sm:text-4xl text-4xl mb-4 font-medium uppercase text-gray-900">
             </h1>
-            <p class="mb-8 leading-loose text-justify font-extralight">Hello, my name is Drew or in some circles, Ray. 
-              I'm a business strategist with a knowledge base in Data Analysis, Data Science, Marketing, Finance,  and Programming. 
+            <p class="mb-8 leading-loose text-justify font-extralight"><b>HELLO, I'M DREW.</b> 
+              I'm a business strategist with a background in Data Analysis, Data Science, Marketing, Finance,  and Programming. 
               I love creating solutions that take (and find) the meaningful out of the meaningless.
                 <br>
                 <br>
@@ -48,16 +48,16 @@
                
                 <br>
                 <br>
-               Let's solve a problem, find value, or build something meaningful together.
+               Let's solve a problem, find value, or build something meaningful together!
             </p>
-            <div class="flex justify-center">
+            <!--<div class="flex justify-center">
               <button class="inline-flex text-white bg-yellow-300 border-0 py-2 px-6 focus:outline-none rounded text-lg font-extralight">DM</button>
-            </div>
+            </div>-->
           </div>
         </div>
-      </section>-->
+      </section>
       <!--A Bit About Myself Top Down #1-->
-      <section class="text-gray-600 bg-gray-100">
+      <!--<section class="text-gray-600 bg-gray-100">
         <div class="container mx-auto flex flex-col px-5 md:py-20 py-8 justify-center items-center">
           <h1 class="sm:text-4xl text-3xl mb-4 font-body uppercase text-gray-900">A Bit About Myself</h1>
           <img class="2xl:w-4/5 lg:w-4/6 md:w-3/6 w-7/8 mb-10 object-cover object-center" alt="hero" src="./images/Drew4.png">
@@ -76,18 +76,18 @@
                 <br>
                Let's solve a problem, find value, or build something meaningful together!
             </p>
-              <!--<div class="relative mr-4 lg:w-full xl:w-1/2 w-2/4 md:w-full text-left">
+              <div class="relative mr-4 lg:w-full xl:w-1/2 w-2/4 md:w-full text-left">
                 <label for="hero-field" class="center leading-7 text-sm mb-2 text-gray-600">What is your business or creative goal?</label>
                 <input type="text" id="hero-field" name="hero-field" class="w-full mb-4 bg-gray-100 bg-opacity-50 rounded focus:ring-2 focus:ring-indigo-200 focus:bg-transparent border border-gray-300 focus:border-indigo-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div>
-              <button class="inline-flex text-white bg-yellow-300 border-0 py-2 px-6 focus:outline-none hover:bg-black rounded text-lg">SHARE</button>-->
+              <button class="inline-flex text-white bg-yellow-300 border-0 py-2 px-6 focus:outline-none hover:bg-black rounded text-lg">SHARE</button>
             </div>
           </div>
           </div>
-      </section>
+      </section>-->
       <!--Footer-->
     <footer class="text-gray-600 border-t border-gray-200">
-        <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+        <div class="container px-5 py-4 mx-auto flex items-center sm:flex-row flex-col">
           <a class="flex title-font font-body items-center md:justify-start justify-center text-gray-900">
             <span class="ml-3 text-xl font-extralight">Drew</span>
           </a>
