update home and about

--- a/public/about.html
+++ b/public/about.html
@@ -32,14 +32,14 @@
     </nav>
     <!--A Bit About Myself Copy (Row Version)-->
     <section class="bg-gray-100 bg-center lg:h-screen center">
-        <div class="container mx-auto mb-16 flex px-5 py-12 md:flex-nowrap flex-wrap">
-          <div class="lg:w-4/5 md:w-1/2 flex p-10 items-center justify-start relative">
-            <img class="object-cover object-center" alt="hero" src="./images/Drew4.png">
+        <div class="container mx-auto  mb-16 flex px-5 py-12 md:flex-nowrap flex-wrap">
+          <div class="lg:w-4/5 md:w-4/5 w-full flex items-center justify-start relative">
+            <img class="" alt="hero" src="./images/Drew4.png">
           </div>
-          <div class="lg:flex-grow md:w-2/5 lg:pl-24 pt-8 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-            <h1 class="font-body sm:text-4xl text-4xl mb-4 font-medium uppercase text-gray-900">
-            </h1>
-            <p class="mb-8 leading-loose text-justify font-extralight"><b>HELLO, I'M DREW.</b> 
+          <div class="lg:flex-grow md:w-2/5 lg:pl-24 md:pt-0 pt-12 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+            <!--<h1 class="font-body sm:text-4xl text-4xl mb-4 font-medium uppercase text-gray-900">
+            </h1>-->
+            <p class="leading-loose text-justify font-extralight text-lg"><b>HELLO. I'M DREW.</b> 
               I'm a business strategist with a background in Data Analysis, Data Science, Marketing, Finance,  and Programming. 
               I love creating solutions that take (and find) the meaningful out of the meaningless.
                 <br>
