--- a/public/index.html
+++ b/public/index.html
@@ -34,11 +34,11 @@
 <!-- Main Display #1 -->
   <section class="bg-gray-100 h-screen bg-center bg-cover">
   <div class="container mx-auto h-screen w-full flex flex-col lg:px-2 px-0 py-18 lg:py-36 2xl:py-64 justify-center items-center">
-      <h1 class="text-8xl text-center font-body text-gray-800 uppercase mb-10">Drew</h1>
-      <div class="rounded-full w-36 h-36 md:w-36 md:h-36 flex items-center justify-center bg-yellow-300 animate-wiggle pl-6 mb-10">
-          <a href="about.html"><img class="object-scale-down h-36 md:h-36" src="./images/Head3.png"></img>
+      <h1 class="text-8xl text-center font-body text-gray-800 uppercase mb-6">Drew</h1>
+      <figure class="rounded-full bg-yellow-300 flex md:flex p-6 pl-16 mb-6">
+          <a href="about.html"><img class="w-46 h-52 md:w-64 md:h-auto animate-wiggle mx-auto" src="./images/Head3.png"></img>
           </a>
-      </div>
+        </figure>
       <h3 class="text-3xl text-center font-body text-gray-800 uppercase">Analytical Business Strategist</h3>
       <p class="text-sm font-body pb-12 lg:pb-20">(FOR CREATORS)</p>
         <div class="center lg:py-16 py-0">
@@ -116,8 +116,8 @@
   <!--Work Flow-->
   <section class="text-gray-800 bg-gray-100">
     <div class="container px-5 py-24 mx-auto">
-      <div class="flex flex-wrap w-full flex-col mb-20 items-center text-center">
-        <h1 class="md:text-4xl lg:text-4xl text-4xl font-body mb-2 text-gray-700 uppercase hover:text-yellow-300">Workflow</h1>
+      <div class="flex flex-wrap w-full flex-col mb-12 items-center text-center">
+        <h1 class="md:text-4xl lg:text-4xl text-4xl font-body text-gray-700 uppercase hover:text-yellow-300">Workflow</h1>
         <p class="max-w-2xl text-md text-gray-400 lg:mx-auto">
        </p>
     </div>
@@ -126,7 +126,6 @@
           <h2 class="text-yellow-300 text-2xl text-center mx-auto">LEARN</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <h2 class="text-gray-800 text-2xl font-body mb-2"></h2>
           <p class="text-gray-900 text-justify font-extralight leading-loose">Understanding objectives and overarching goals 
             of each project are pivotal. They keep the process focused.
             Each client's problem is different. My approach synthesizes the subjectivity of the problem and then applies strategical objectivity.</p>
@@ -139,7 +138,6 @@
           <h2 class="text-yellow-300 text-2xl text-center mx-auto">THINK</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <h2 class="text-gray-800 text-2xl font-body mb-2"></h2>
           <p class="text-gray-900 text-justify font-extralight leading-loose">Ideating is my strongsuit. My goal with each project is to derive insight or generate value for my clients. 
             For this to occur, I have to think, operationally, creatively, and comprehensively. 
             The hypotheses that I generate undergo levels of iterations so that one can fulfill the project goals.</p>
@@ -152,7 +150,6 @@
           <h2 class="text-yellow-300 text-2xl text-center mx-auto">CREATE</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <h2 class="text-gray-800 text-2xl font-body mb-2"></h2>
           <p class="text-gray-900 text-justify font-extralight leading-loose">To have usability and applicability, a product or service has to be easy to understand, functional, and distinctive. To ensure the project received a balanced mix of each component, I like to remain in close contact with the client so that each element is addressed holistically.</p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
           </a>
