--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
           <p class="text-gray-900 text-justify font-extralight leading-loose">Ideating is my strongsuit. My goal with each project is to derive insight or generate value for my clients. 
             For this to occur, I have to think, operationally, creatively, and comprehensively. 
-            The hypotheses that I generate undergo levels of iterations so that one can fulfill the project goals.</p>
+            The hypotheses that I generate undergo levels of iterations so that I can fulfill the project goals.</p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
           </a>
         </div>
@@ -150,7 +150,10 @@
           <h2 class="text-yellow-300 text-2xl text-center mx-auto">CREATE</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-extralight leading-loose">To have usability and applicability, a product or service has to be easy to understand, functional, and distinctive. To ensure the project received a balanced mix of each component, I like to remain in close contact with the client so that each element is addressed holistically.</p>
+          <p class="text-gray-900 text-justify font-extralight leading-loose">To have usability and applicability, 
+            a product or service has to be easy to understand, functional, and distinctive. 
+            To ensure the project received a balanced mix of each component, 
+            I like to remain in close contact with each client so that each element is addressed holistically.</p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
           </a>
         </div>
