--- a/public/about.html
+++ b/public/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="icon" type="image/png" href="./images/Button1.png"/>
     <title>About</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 </head>
@@ -25,9 +26,9 @@
         </svg>
     </div>
     <div class="hidden md:block z-20" id="menu">
-            <a href="index.html" class="h-1/3 p-4">HOME</a>
-            <a href="about.html" class="font-bold animate-pulse h-1/3 p-4">ABOUT</a>
-            <a href="work.html" class="h-1/3 p-4">WORK</a>
+            <a href="index.html" class="font-extralight h-1/3 p-4">HOME</a>
+            <a href="about.html" class="font-extralight animate-pulse h-1/3 p-4">ABOUT</a>
+            <a href="work.html" class="font-extralight h-1/3 p-4">WORK</a>
     </div> 
     </nav>
     <!--A Bit About Myself Copy (Row Version)-->
@@ -48,7 +49,7 @@
                
                 <br>
                 <br>
-               Let's solve a problem, find value, or build something meaningful together!
+               Let's solve a problem, find value, or build something meaningful together! <b>DM ME!</b>
             </p>
             <!--<div class="flex justify-center">
               <button class="inline-flex text-white bg-yellow-300 border-0 py-2 px-6 focus:outline-none rounded text-lg font-extralight">DM</button>
@@ -87,21 +88,21 @@
       </section>-->
       <!--Footer-->
     <footer class="text-gray-600 border-t border-gray-200">
-        <div class="container px-5 py-4 mx-auto flex items-center sm:flex-row flex-col">
+        <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
           <a class="flex title-font font-body items-center md:justify-start justify-center text-gray-900">
             <span class="ml-3 text-xl font-extralight">Drew</span>
           </a>
           <p class="text-sm text-gray-500 font-extralight sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 —
-            <a href="https://twitter.com/drewbyts" class="text-gray-800 font-extralight ml-1" rel="noopener noreferrer" target="_blank">@drewbyts</a>
+            <a href="https://twitter.com/drewbyts" class="text-gray-600 font-extralight ml-1" rel="noopener noreferrer" target="_blank">@drewbyts</a>
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-            <p class="text-gray-800 font-extralight uppercase">Contact via DM</p>
-            <a  href="https://twitter.com/drewbyts" class="ml-3 text-gray-700">
+            <p class="text-gray-900 font-extralight"></p>
+            <a  href="https://twitter.com/drewbyts" class="ml-3 text-blue-400">
               <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                 <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
               </svg>
             </a>
-            <a href="https://www.instagram.com/drewbyts/" class="ml-3 text-gray-700">
+            <a href="https://www.instagram.com/drewbyts/" class="ml-3 text-pink-400">
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                 <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
                 <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
