--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="icon" type="image/png" href="./images/Button1.png"/>
     <title>Drew</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 </head>
@@ -26,9 +27,9 @@
     </svg>
        </div> 
         <div class="hidden md:block z-20" id="menu">
-            <a href="index.html" class="font-bold animate-pulse h-1/3 p-4">HOME</a>
-            <a href="about.html" class="h-1/3 p-4">ABOUT</a>
-            <a href="work.html" class="h-1/3 p-4">WORK</a>
+            <a href="index.html" class="font-extralight animate-pulse h-1/3 p-4">HOME</a>
+            <a href="about.html" class="font-extralight h-1/3 p-4">ABOUT</a>
+            <a href="work.html" class="font-extralight h-1/3 p-4">WORK</a>
         </div> 
     </nav>
 <!-- Main Display #1 -->
@@ -36,11 +37,11 @@
   <div class="container mx-auto h-screen w-full flex flex-col lg:px-2 px-0 py-18 lg:py-36 2xl:py-64 justify-center items-center">
       <h1 class="text-8xl text-center font-body text-gray-800 uppercase mb-6">Drew</h1>
       <figure class="rounded-full bg-yellow-300 flex md:flex p-6 pl-16 mb-6">
-          <a href="about.html"><img class="w-46 h-52 md:w-64 md:h-auto animate-wiggle mx-auto" src="./images/Head3.png"></img>
+          <a href="about.html"><img class="w-46 h-52 md:w-64 md:h-auto mx-auto" src="./images/Head3.png"></img>
           </a>
         </figure>
       <h3 class="text-3xl text-center font-body text-gray-800 uppercase">Analytical Business Strategist</h3>
-      <p class="text-sm font-body pb-12 lg:pb-20">(FOR CREATORS)</p>
+      <!--<p class="text-sm font-body pb-12 lg:pb-20">(FOR CREATORS)</p>-->
         <div class="center lg:py-16 py-0">
           <svg class="lg:absolute md:bottom-0 bottom-0 w-12 h-12" fill="black" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
@@ -52,7 +53,7 @@
   <section class="text-gray-800 bg-gray-50">
     <div class="container mx-auto px-5 py-24">
       <div class="flex flex-col text-center w-full mb-20">
-        <h1 class="text-4xl uppercase font-body mb-4 text-gray-900 hover:text-yellow-300">SkillSet</h1>
+        <h1 class="text-4xl uppercase font-body mb-4 text-gray-900 hover:text-yellow-300">Skill Set</h1>
         <p class="lg:w-2/3 mx-auto leading-relaxed font-extralight">I don't know who you are. I don't know what you want. If you are looking for quick answers, I don't have that, but what I do have are a very particular set of skills</p>
       </div>
       <div class="flex flex-wrap -m-2">
@@ -172,8 +173,8 @@
         </div>
     </div>
   -->
-    <footer class="text-gray-600 border-t border-gray-200">
-          <div class="container px-5 py-4 mx-auto flex items-center sm:flex-row flex-col">
+    <footer class="text-gray-600 border-t border-gray-100">
+          <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
             <a class="flex title-font font-body items-center md:justify-start justify-center text-gray-900">
               <!--SVG Icon Placeholder-->
               <span class="ml-3 text-xl font-extralight">Drew</span>
@@ -182,13 +183,13 @@
               <a href="https://twitter.com/drewbyts" class="text-gray-600 font-extralight ml-1" rel="noopener noreferrer" target="_blank">@drewbyts</a>
             </p>
             <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-              <p class="text-gray-800 font-extralight uppercase">Contact via DM</p>
-              <a  href="https://twitter.com/drewbyts" class="ml-3 text-gray-500">
+              <p class="text-gray-600 font-extralight uppercase"></p>
+              <a  href="https://twitter.com/drewbyts" class="ml-3 text-blue-400">
                 <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                   <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
                 </svg>
               </a>
-              <a href="https://www.instagram.com/drewbyts/" class="ml-3 text-gray-500">
+              <a href="https://www.instagram.com/drewbyts/" class="ml-3 text-pink-400">
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                   <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
                   <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
