--- a/public/work.html
+++ b/public/work.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="./images/Button1.png"/>
+    <title>Work</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 </head>
 <body>
@@ -27,9 +28,9 @@
     </svg>
        </div> 
         <div class="hidden md:block z-20" id="menu">
-            <a href="index.html" class="h-1/3 p-4">HOME</a>
-            <a href="about.html" class="h-1/3 p-4">ABOUT</a>
-            <a href="work.html" class="font-bold animate-pulse h-1/3 p-4">WORK</a>
+            <a href="index.html" class="font-extralight h-1/3 p-4">HOME</a>
+            <a href="about.html" class="font-extralight h-1/3 p-4">ABOUT</a>
+            <a href="work.html" class="font-extralight animate-pulse h-1/3 p-4">WORK</a>
         </div> 
     </nav>
     <!--Case Studies Section-->
