--- a/public/work.html
+++ b/public/work.html
@@ -28,9 +28,9 @@
     </svg>
        </div> 
         <div class="hidden md:block z-20" id="menu">
-            <a href="index.html" class="font-extralight h-1/3 p-4">HOME</a>
-            <a href="about.html" class="font-extralight h-1/3 p-4">ABOUT</a>
-            <a href="work.html" class="font-extralight animate-pulse h-1/3 p-4">WORK</a>
+            <a href="index.html" class="font-light h-1/3 p-4">HOME</a>
+            <a href="about.html" class="font-light h-1/3 p-4">ABOUT</a>
+            <a href="work.html" class="font-light animate-pulse h-1/3 p-4">WORK</a>
         </div> 
     </nav>
     <!--Case Studies Section-->
