--- a/public/about.html
+++ b/public/about.html
@@ -26,9 +26,9 @@
         </svg>
     </div>
     <div class="hidden md:block z-20" id="menu">
-            <a href="index.html" class="font-light h-1/3 p-4">HOME</a>
-            <a href="about.html" class="font-light animate-pulse h-1/3 p-4">ABOUT</a>
-            <a href="work.html" class="font-light h-1/3 p-4">WORK</a>
+            <a href="index.html" class="font-body h-1/3 p-4">HOME</a>
+            <a href="about.html" class="font-body animate-pulse h-1/3 p-4">ABOUT</a>
+            <a href="work.html" class="font-body h-1/3 p-4">WORK</a>
     </div> 
     </nav>
     <!--A Bit About Myself Copy (Row Version)-->
