--- a/public/about.html
+++ b/public/about.html
@@ -40,7 +40,7 @@
           <div class="lg:flex-grow md:w-2/5 lg:pl-24 md:pt-0 pt-12 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <!--<h1 class="font-body sm:text-4xl text-4xl mb-4 font-medium uppercase text-gray-900">
             </h1>-->
-            <p class="leading-loose text-justify font-extralight text-lg"><b>HELLO. I'M DREW.</b> 
+            <p class="leading-loose text-justify font-body font-extralight text-lg"><b>HELLO. I'M DREW.</b> 
               I'm a business strategist with a background in Data Analysis, Data Science, Marketing, Finance,  and Programming. 
               I love creating solutions that take (and find) the meaningful out of the meaningless.
                 <br>
