--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <div class="container mx-auto px-5 py-24">
       <div class="flex flex-col text-center w-full mb-20">
         <h1 class="text-4xl uppercase font-body mb-4 text-gray-900 hover:text-yellow-300">Skill Set</h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed font-extralight">I don't know who you are. I don't know what you want. If you are looking for quick answers, I don't have that, but what I do have are a very particular set of skills</p>
+        <p class="lg:w-2/3 mx-auto leading-relaxed font-body font-extralight">I don't know who you are. I don't know what you want. If you are looking for quick answers, I don't have that, but what I do have are a very particular set of skills</p>
       </div>
       <div class="flex flex-wrap -m-2">
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
@@ -124,10 +124,10 @@
     </div>
       <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
         <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center flex-shrink-0">
-          <h2 class="text-yellow-300 text-2xl text-center mx-auto">LEARN</h2>
+          <h2 class="text-yellow-300 text-2xl font-body text-center mx-auto">LEARN</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-extralight leading-loose">Understanding objectives and overarching goals 
+          <p class="text-gray-900 text-justify font-body font-extralight leading-loose">Understanding objectives and overarching goals 
             of each project are pivotal. They keep the process focused.
             Each client's problem is different. My approach synthesizes the subjectivity of the problem and then applies strategical objectivity.</p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
@@ -136,10 +136,10 @@
       </div>
       <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
         <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center  flex-shrink-0">
-          <h2 class="text-yellow-300 text-2xl text-center mx-auto">THINK</h2>
+          <h2 class="text-yellow-300 text-2xl font-body text-center mx-auto">THINK</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-extralight leading-loose">Ideating is my strongsuit. My goal with each project is to derive insight or generate value for my clients. 
+          <p class="text-gray-900 text-justify font-body font-extralight leading-loose">Ideating is my strongsuit. My goal with each project is to derive insight or generate value for my clients. 
             For this to occur, I have to think, operationally, creatively, and comprehensively. 
             The hypotheses that I generate undergo levels of iterations so that I can fulfill the project goals.</p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
@@ -148,10 +148,10 @@
       </div>
       <div class="flex items-center lg:w-3/5 mx-auto sm:flex-row flex-col">
         <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center flex-shrink-0">
-          <h2 class="text-yellow-300 text-2xl text-center mx-auto">CREATE</h2>
+          <h2 class="text-yellow-300 text-2xl font-body text-center mx-auto">CREATE</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-extralight leading-loose">To have usability and applicability, 
+          <p class="text-gray-900 text-justify font-body font-extralight leading-loose">To have usability and applicability, 
             a product or service has to be easy to understand, functional, and distinctive. 
             To ensure the project received a balanced mix of each component, 
             I like to remain in close contact with each client so that each element is addressed holistically.</p>
