--- a/public/work.html
+++ b/public/work.html
@@ -43,9 +43,9 @@
             <div class="p-4 md:w-1/3">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
                 <a href="https://drewbyts.github.io/Market-Analysis/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/GamingYellow.jpg" alt="blog"></a>
-                <div class="font-extralight p-6">
+                <div class="font-body font-extralight p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-yellow-300 mb-1">EXPLORATORY DATA ANALYSIS</h2>
-                  <h1 class="title-font text-lg font-medium text-gray-900 mb-3">2020: The State of the Stock Market</h1>
+                  <h1 class="title-font text-lg font-body text-gray-900 mb-3">2020: The State of the Stock Market</h1>
                   <p class="leading-relaxed mb-3">Using R, I coded a R Markdown report that analyzed the market performance and identified market trends through Exchange-Traded Funds.</p>
                   <div class="flex items-center flex-wrap ">
                     <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
@@ -66,9 +66,9 @@
             <div class="p-4 md:w-1/3">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
                 <a href="https://drewbyts.github.io/Shelter-Analysis/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/PetsYellow.jpg" alt="blog"></a>
-                <div class="font-extralight p-6">
-                  <h2 class="tracking-widest text-xs title-font font-medium text-yellow-300 mb-1">EXPLORATORY DATA ANALYSIS</h2>
-                  <h1 class="title-font text-lg font-medium text-gray-900 mb-3">2020: Sacramento Shelter Analysis</h1>
+                <div class="font-body font-extralight p-6">
+                  <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">EXPLORATORY DATA ANALYSIS</h2>
+                  <h1 class="title-font text-lg font-body text-gray-900 mb-3">2020: Sacramento Shelter Analysis</h1>
                   <p class="leading-relaxed mb-3">Using R, I wrangled City of Sacramento data to create a R Markdown report that identified how animal shelters were impacted in 2020.</p>
                   <div class="flex items-center flex-wrap">
                     <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
@@ -89,9 +89,9 @@
             <div class="p-4 md:w-1/3">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
                 <a href="https://aramirez.netlify.app/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/Dec-4-Big Sur.jpg" alt="blog"></a>
-                <div class=" font-extralight p-6">
-                  <h2 class="tracking-widest text-xs title-font font-medium text-yellow-300 mb-1">WEB DEVELOPMENT</h2>
-                  <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Portfolio</h1>
+                <div class="font-body font-extralight p-6">
+                  <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">WEB DEVELOPMENT</h2>
+                  <h1 class="title-font text-lg font-body text-gray-900 mb-3">Portfolio</h1>
                   <p class="leading-relaxed mb-3">Using Gatsby, React, and Netlify, I managed to develop a personal website to assist in highlighting my projects and personality.</p>
                   <div class="flex items-center flex-wrap ">
                     <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
