update website fonts

--- a/public/about.html
+++ b/public/about.html
@@ -40,8 +40,8 @@
           <div class="lg:flex-grow md:w-2/5 lg:pl-24 md:pt-0 pt-12 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <!--<h1 class="font-body sm:text-4xl text-4xl mb-4 font-medium uppercase text-gray-900">
             </h1>-->
-            <p class="leading-loose text-justify font-body font-extralight text-lg"><b>HELLO. I'M DREW.</b> 
-              I'm a business strategist with a background in Data Analysis, Data Science, Marketing, Finance,  and Programming. 
+            <p class="leading-loose text-justify font-body"><b>HELLO. I'M DREW.</b> 
+              I'm a business strategist with a background in Data Analysis, Data Science, Marketing, Finance, and Programming. 
               I love creating solutions that take (and find) the meaningful out of the meaningless.
                 <br>
                 <br>
@@ -90,10 +90,10 @@
     <footer class="text-gray-600 border-t border-gray-200">
         <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
           <a class="flex title-font font-body items-center md:justify-start justify-center text-gray-900">
-            <span class="ml-3 text-xl font-extralight">Drew</span>
+            <span class="ml-3 text-xl">Drew</span>
           </a>
-          <p class="text-sm text-gray-500 font-extralight sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 —
-            <a href="https://twitter.com/drewbyts" class="text-gray-600 font-extralight ml-1" rel="noopener noreferrer" target="_blank">@drewbyts</a>
+          <p class="text-sm text-gray-500 font-body sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 —
+            <a href="https://twitter.com/drewbyts" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@drewbyts</a>
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
             <p class="text-gray-900 font-extralight"></p>
