--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
 <!-- Main Display #1 -->
   <section class="bg-gray-100 h-screen bg-center bg-cover">
   <div class="container mx-auto h-screen w-full flex flex-col lg:px-2 px-0 py-18 lg:py-36 2xl:py-64 justify-center items-center">
-      <h1 class="text-8xl text-center font-body text-gray-800 uppercase mb-6">Drew</h1>
-      <figure class="rounded-full bg-yellow-300 flex md:flex p-6 pl-16 mb-6">
-          <a href="about.html"><img class="w-46 h-52 md:w-64 md:h-auto mx-auto" src="./images/Head3.png"></img>
+      <h1 class="text-8xl text-center font-extrabold text-gray-800 uppercase mb-6">Drew</h1>
+      <figure class="rounded-full bg-yellow-300 flex md:flex p-2  mb-6">
+          <a href="about.html"><img class="w-46 h-52 md:w-64 md:h-auto mx-auto" src="./images/Button1.png"></img>
           </a>
         </figure>
       <h3 class="text-3xl text-center font-body text-gray-800 uppercase">Analytical Business Strategist</h3>
@@ -53,7 +53,7 @@
   <section class="text-gray-800 bg-gray-50">
     <div class="container mx-auto px-5 py-24">
       <div class="flex flex-col text-center w-full mb-20">
-        <h1 class="text-4xl uppercase font-body mb-4 text-gray-900 hover:text-yellow-300">Skill Set</h1>
+        <h1 class="text-6xl uppercase mb-4 font-extrabold text-gray-900 hover:text-yellow-300">Skill Set</h1>
         <p class="lg:w-2/3 mx-auto leading-relaxed font-body font-extralight">I don't know who you are. I don't know what you want. If you are looking for quick answers, I don't have that, but what I do have are a very particular set of skills</p>
       </div>
       <div class="flex flex-wrap -m-2">
@@ -118,16 +118,16 @@
   <section class="text-gray-800 bg-gray-100">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap w-full flex-col mb-12 items-center text-center">
-        <h1 class="md:text-4xl lg:text-4xl text-4xl font-body text-gray-700 uppercase hover:text-yellow-300">Workflow</h1>
+        <h1 class="text-6xl font-extrabold text-gray-700 uppercase hover:text-yellow-300">Workflow</h1>
         <p class="max-w-2xl text-md text-gray-400 lg:mx-auto">
        </p>
     </div>
       <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
         <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center flex-shrink-0">
-          <h2 class="text-yellow-300 text-2xl font-body text-center mx-auto">LEARN</h2>
+          <h2 class="text-yellow-300 text-2xl text-center mx-auto">LEARN</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-body font-extralight leading-loose">Understanding objectives and overarching goals 
+          <p class="text-gray-900 text-justify font-body leading-loose">Understanding objectives and overarching goals 
             of each project are pivotal. They keep the process focused.
             Each client's problem is different. My approach synthesizes the subjectivity of the problem and then applies strategical objectivity.</p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
@@ -136,10 +136,10 @@
       </div>
       <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
         <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center  flex-shrink-0">
-          <h2 class="text-yellow-300 text-2xl font-body text-center mx-auto">THINK</h2>
+          <h2 class="text-yellow-300 text-2xl text-center mx-auto">THINK</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-body font-extralight leading-loose">Ideating is my strongsuit. My goal with each project is to derive insight or generate value for my clients. 
+          <p class="text-gray-900 text-justify font-body leading-loose">Ideating is my strongsuit. My goal with each project is to derive insight or generate value for my clients. 
             For this to occur, I have to think, operationally, creatively, and comprehensively. 
             The hypotheses that I generate undergo levels of iterations so that I can fulfill the project goals.</p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
@@ -148,10 +148,10 @@
       </div>
       <div class="flex items-center lg:w-3/5 mx-auto sm:flex-row flex-col">
         <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center flex-shrink-0">
-          <h2 class="text-yellow-300 text-2xl font-body text-center mx-auto">CREATE</h2>
+          <h2 class="text-yellow-300 text-2xl text-center mx-auto">CREATE</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-body font-extralight leading-loose">To have usability and applicability, 
+          <p class="text-gray-900 text-justify font-body leading-loose">To have usability and applicability, 
             a product or service has to be easy to understand, functional, and distinctive. 
             To ensure the project received a balanced mix of each component, 
             I like to remain in close contact with each client so that each element is addressed holistically.</p>
@@ -177,10 +177,10 @@
           <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
             <a class="flex title-font font-body items-center md:justify-start justify-center text-gray-900">
               <!--SVG Icon Placeholder-->
-              <span class="ml-3 text-xl font-extralight">Drew</span>
+              <span class="ml-3 text-xl font-body">Drew</span>
             </a>
-            <p class="text-sm text-gray-500 font-extralight sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 —
-              <a href="https://twitter.com/drewbyts" class="text-gray-600 font-extralight ml-1" rel="noopener noreferrer" target="_blank">@drewbyts</a>
+            <p class="text-sm text-gray-500 font-body sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 —
+              <a href="https://twitter.com/drewbyts" class="text-gray-600 font-body ml-1" rel="noopener noreferrer" target="_blank">@drewbyts</a>
             </p>
             <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
               <p class="text-gray-600 font-extralight uppercase"></p>
