--- a/public/work.html
+++ b/public/work.html
@@ -45,8 +45,8 @@
                 <a href="https://drewbyts.github.io/Market-Analysis/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/GamingYellow.jpg" alt="blog"></a>
                 <div class="font-body font-extralight p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-yellow-300 mb-1">EXPLORATORY DATA ANALYSIS</h2>
-                  <h1 class="title-font text-lg font-body text-gray-900 mb-3">2020: The State of the Stock Market</h1>
-                  <p class="leading-relaxed mb-3">Using R, I coded a R Markdown report that analyzed the market performance and identified market trends through Exchange-Traded Funds.</p>
+                  <h1 class="title-font text-lg font-body text-gray-900 mb-3">2020: State of the Stock Market</h1>
+                  <p class="leading-relaxed mb-3">Using R, I coded a R Markdown report that analyzed the market performance and identified market trends using Exchange-Traded Funds.</p>
                   <div class="flex items-center flex-wrap ">
                     <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
                       <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
@@ -68,8 +68,8 @@
                 <a href="https://drewbyts.github.io/Shelter-Analysis/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/PetsYellow.jpg" alt="blog"></a>
                 <div class="font-body font-extralight p-6">
                   <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">EXPLORATORY DATA ANALYSIS</h2>
-                  <h1 class="title-font text-lg font-body text-gray-900 mb-3">2020: Sacramento Shelter Analysis</h1>
-                  <p class="leading-relaxed mb-3">Using R, I wrangled City of Sacramento data to create a R Markdown report that identified how animal shelters were impacted in 2020.</p>
+                  <h1 class="title-font text-lg font-body text-gray-900 mb-3">2020: Animal Shelter Analysis</h1>
+                  <p class="leading-relaxed mb-3">Using R, I wrangled City of Sacramento data to create a R Markdown report that identified how shelters were impacted in 2020.</p>
                   <div class="flex items-center flex-wrap">
                     <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
                       <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
@@ -92,7 +92,7 @@
                 <div class="font-body font-extralight p-6">
                   <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">WEB DEVELOPMENT</h2>
                   <h1 class="title-font text-lg font-body text-gray-900 mb-3">Portfolio</h1>
-                  <p class="leading-relaxed mb-3">Using Gatsby, React, and Netlify, I managed to develop a personal website to assist in highlighting my projects and personality.</p>
+                  <p class="leading-relaxed mb-3">Using Gatsby, React, and Netlify, I developed a personal website to assist in highlighting my projects and personality.</p>
                   <div class="flex items-center flex-wrap ">
                     <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
                       <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
