update mobile layout

--- a/public/index.html
+++ b/public/index.html
@@ -117,12 +117,12 @@
   <!--Work Flow-->
   <section class="text-gray-800 bg-gray-100">
     <div class="container px-5 py-24 mx-auto">
-      <div class="flex flex-wrap w-full flex-col mb-12 items-center text-center">
+      <div class="flex flex-col text-center w-full mb-12">
         <h1 class="text-6xl font-extrabold text-gray-700 uppercase hover:text-yellow-300">Workflow</h1>
         <p class="max-w-2xl text-md text-gray-400 lg:mx-auto">
        </p>
     </div>
-      <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
+      <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-4 border-gray-200 sm:flex-row flex-col">
         <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center flex-shrink-0">
           <h2 class="text-yellow-300 text-2xl text-center mx-auto">LEARN</h2>
         </div>
@@ -134,7 +134,7 @@
           </a>
         </div>
       </div>
-      <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
+      <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-4 border-gray-200 sm:flex-row flex-col">
         <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center  flex-shrink-0">
           <h2 class="text-yellow-300 text-2xl text-center mx-auto">THINK</h2>
         </div>
