--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
   <section class="text-gray-800 bg-gray-100">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-col text-center w-full mb-12">
-        <h1 class="text-6xl font-extrabold text-gray-700 uppercase hover:text-yellow-300">workflow</h1>
+        <h1 class="text-6xl font-extrabold text-gray-900 uppercase hover:text-yellow-300">the flow</h1>
         <p class="max-w-2xl text-md text-gray-400 lg:mx-auto">
        </p>
     </div>
