update about page

--- a/public/about.html
+++ b/public/about.html
@@ -34,14 +34,16 @@
     <!--A Bit About Myself Copy (Row Version)-->
     <section class="bg-gray-100 bg-center lg:h-screen center">
         <div class="container mx-auto  mb-16 flex px-5 py-12 md:flex-nowrap flex-wrap">
+          <h1 class="font-body md:hidden sm:text-3xl text-3xl mb-4 uppercase text-gray-900">Hello.I'm Drew...
+          </h1>
           <div class="lg:w-4/5 md:w-4/5 w-full flex items-center justify-start relative">
             <img class="" alt="hero" src="./images/Drew4.png">
           </div>
           <div class="lg:flex-grow md:w-2/5 lg:pl-24 md:pt-0 pt-12 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-            <!--<h1 class="font-body sm:text-4xl text-4xl mb-4 font-medium uppercase text-gray-900">
-            </h1>-->
-            <p class="leading-loose text-justify font-body"><b>HELLO. I'M DREW.</b> 
-              I'm a business strategist with a background in Data Analysis, Data Science, Marketing, Finance, and Programming. 
+            <h1 class="font-body hidden sm:text-3xl text-3xl mb-4 font-medium uppercase text-gray-900">Hello.I'm Drew...
+            </h1>
+            <p class="leading-loose text-justify font-body"> 
+              I'm a business strategist with a background in Data Analysis, Marketing, Finance, and Programming. 
               I love creating solutions that take (and find) the meaningful out of the meaningless.
                 <br>
                 <br>
