--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
           <div class="h-full flex items-center hover:bg-yellow-300 border-gray-200 border p-4 rounded-lg">
             <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/ML2.png">
             <div class="flex-grow">
-              <h2 class="text-gray-900 font-body text-2xl">Machine Learning</h2>
+              <h2 class="text-gray-900 font-body text-2xl">Data Analysis</h2>
               <p class="text-gray-600 uppercase text-xs">Analytics</p>
             </div>
           </div>
@@ -70,7 +70,7 @@
           <div class="h-full flex items-center hover:bg-yellow-300 border-gray-200 border p-4 rounded-lg">
             <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/MktResearch.png">
             <div class="flex-grow">
-              <h2 class="text-gray-900 font-body text-2xl">Market Research</h2>
+              <h2 class="text-gray-900 font-body text-2xl">Market Intelligence</h2>
               <p class="text-gray-600 uppercase text-xs">Strategy</p>
             </div>
           </div>
@@ -97,7 +97,7 @@
           <div class="h-full flex items-center hover:bg-yellow-300 border-gray-200 border p-4 rounded-lg">
             <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/Strategy2.png">
             <div class="flex-grow">
-              <h2 class="text-gray-900 font-body text-2xl">Content Strategy</h2>
+              <h2 class="text-gray-900 font-body text-2xl">Brand Strategy</h2>
               <p class="text-gray-600 uppercase text-xs">Strategy</p>
             </div>
           </div>
@@ -106,7 +106,7 @@
           <div class="h-full flex items-center hover:bg-yellow-300 border-gray-200 border p-4 rounded-lg">
             <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/Reporting.png">
             <div class="flex-grow">
-              <h2 class="text-gray-900 font-body text-2xl">Creative Reporting</h2>
+              <h2 class="text-gray-900 font-body text-2xl">Brand Reporting</h2>
               <p class="text-gray-600 uppercase text-xs">Analytics</p>
             </div>
           </div>
@@ -160,7 +160,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>    
   <!--Footer
   <div class="bg-no-repeat h-5/6 bg-center bg-cover mb-20" style="background-color:white">
         <div class="container px-5 py-24 mx-auto">
@@ -183,7 +183,7 @@
               <a href="https://twitter.com/drewbyts" class="text-gray-600 font-body ml-1" rel="noopener noreferrer" target="_blank">@drewbyts</a>
             </p>
             <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-              <p class="text-gray-600 font-extralight uppercase"></p>
+              <p class="text-gray-600 font-extralight"></p>
               <a  href="https://twitter.com/drewbyts" class="ml-3 text-blue-400">
                 <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                   <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
