--- a/public/about.html
+++ b/public/about.html
@@ -37,7 +37,7 @@
           <h1 class="font-extrabold md:hidden sm:text-5xl text-5xl mb-4 uppercase text-gray-900">Hello.<br>I'm Drew...
           </h1>
           <div class="lg:w-4/5 md:w-4/5 w-full flex items-center justify-start relative">
-            <img class="" alt="hero" src="./images/Drew6.png">
+            <img class="" alt="hero" src="./images/Dec_07_2021_Drew.png">
           </div>
           <div class="lg:flex-grow md:w-2/5 lg:pl-24 md:pt-0 pt-12 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <p class="leading-loose text-justify font-body"> 
