update home and about

--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,10 @@
       </figure>
       <h3 class="text-3xl text-center font-body text-gray-800 uppercase">Analytical Business Strategist</h3>
         <div class="lg:py-16">
-          <svg class="w-12 h-12" fill="black" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          <!--<svg class="w-12 h-12" fill="black" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-          </svg>
+          </svg>-->
+          <a href= "#work-section" class="inline-flex text-gray-800 bg-yellow-300 border-0 py-2 px-6 mt-6 focus:outline-none rounded">WORK</a>
         </div>
   </section>
   <!--Skill Set Section-->
@@ -117,6 +118,7 @@
   </section>
 <!--Work Section-->
   <section class="bg-gray-100 bg-center text-gray-800">
+    <div id="work-section"></div>
     <div class="container mx-auto px-5 py-12">
       <div class="flex flex-col text-center mb-8">
         <h1 class="text-6xl uppercase mb-4 font-extrabold text-gray-900 hover:text-yellow-300">Work</h1>
