--- a/public/about.html
+++ b/public/about.html
@@ -40,15 +40,13 @@
           </div>
           <div class="lg:flex-grow md:w-2/5 lg:pl-24 md:pt-0 pt-12 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <p class="leading-loose font-body"> 
-              I'm a Data Analyst with a background in Data Analytics, Marketing, Finance, and Front End Web Development. 
-              I love creating solutions that take (and find) the meaningful out of the meaningless.
+              I’m a Data Analyst, who specializes in product analytics, marketing analytics, and market intelligence. 
                 <br>
                 <br>
-              Professional me aside, I'm active. I'm sarcastic. I'm everything my caricature represents.
-               
+              I’ve created two resources, TweetBord and a Youtube Channel, to help inform and educate current and aspiring data nerds!
                 <br>
                 <br>
-               Let's solve a problem, find value, or build something meaningful together!
+              Let’s solve a problem, find value, and build something meaningful together!   
             </p>
             <div class="flex justify-center">
               <a href = "mailto: drewbyts@gmail.com" class="inline-flex text-gray-800 bg-yellow-300 border-0 py-2 px-6 mt-6 focus:outline-none rounded">EMAIL</a>
