--- a/public/about.html
+++ b/public/about.html
@@ -43,7 +43,7 @@
               I’m a Data Analyst, who specializes in product analytics, marketing analytics, and market intelligence. 
                 <br>
                 <br>
-              I’ve created two resources, TweetBord and a Youtube Channel, to help inform and educate current and aspiring data nerds!
+              Professional me aside, I'm active. I'm a bit sarcastic. And I'm everything my caricature represents.
                 <br>
                 <br>
               Let’s solve a problem, find value, and build something meaningful together!   
