--- a/public/about.html
+++ b/public/about.html
@@ -40,10 +40,10 @@
           </div>
           <div class="lg:flex-grow md:w-2/5 lg:pl-24 md:pt-0 pt-12 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <p class="leading-loose font-body"> 
-              I’m a Data Analyst, who specializes in product analytics, marketing analytics, and market intelligence. 
+              I’m a Data Analyst who specializes in exploratory data analysis, data visualization, and product analytics.  
                 <br>
                 <br>
-              Professional me aside, I'm active. I'm a bit sarcastic. And I'm everything my caricature represents.
+              Professional me aside, I'm active, a bit sarcastic, and I'm everything my caricature represents.
                 <br>
                 <br>
               Let’s solve a problem, find value, and build something meaningful together!   
