--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
         <!--<p class="lg:w-2/3 mx-auto leading-relaxed font-body font-extralight">lorem psum</p>-->
       </div>
       <div class="flex flex-wrap -m-2">
-        <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+        <div class="p-2 lg:w-0.45 md:w-1/2 w-full">
           <div class="h-full flex items-center hover:bg-yellow-300 border-gray-200 border p-4 rounded-lg">
             <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/ML2.png">
             <div class="flex-grow">
@@ -68,25 +68,16 @@
             </div>
           </div>
         </div>
-        <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+        <div class="p-2 lg:w-0.45 md:w-1/2 w-full">
           <div class="h-full flex items-center hover:bg-yellow-300 border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/MktResearch.png">
+            <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/Reporting.png">
             <div class="flex-grow">
-              <h2 class="text-gray-900 font-body text-2xl">Market Intelligence</h2>
-              <p class="text-gray-600 uppercase text-xs">Strategy</p>
+              <h2 class="text-gray-900 font-body text-2xl">Reporting</h2>
+              <p class="text-gray-600 uppercase text-xs">Analytics</p>
             </div>
           </div>
         </div>
-        <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-          <div class="h-full flex items-center hover:bg-yellow-300 border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0  mr-4" src="./images/WebDevLogo.png">
-            <div class="flex-grow">
-              <h2 class="text-gray-900 font-body text-2xl">Web Development</h2>
-              <p class="text-gray-600 uppercase text-xs">UI/UX</p>
-            </div>
-          </div>
-        </div>
-        <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+        <div class="p-2 lg:w-0.45 md:w-1/2 w-full">
           <div class="h-full flex items-center hover:bg-yellow-300 border-gray-200 border p-4 rounded-lg">
             <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/DataViz.png">
             <div class="flex-grow">
@@ -95,20 +86,11 @@
             </div>
           </div>
         </div>
-        <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+        <div class="p-2 lg:w-0.45 md:w-1/2 w-full">
           <div class="h-full flex items-center hover:bg-yellow-300 border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/Strategy2.png">
+            <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/MktResearch.png"> 
             <div class="flex-grow">
-              <h2 class="text-gray-900 font-body text-2xl">Brand Strategy</h2>
-              <p class="text-gray-600 uppercase text-xs">Strategy</p>
-            </div>
-          </div>
-        </div>
-        <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-          <div class="h-full flex items-center hover:bg-yellow-300 border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 object-cover object-center flex-shrink-0 mr-4" src="./images/Reporting.png">
-            <div class="flex-grow">
-              <h2 class="text-gray-900 font-body text-2xl">Brand Reporting</h2>
+              <h2 class="text-gray-900 font-body text-2xl">Data Science</h2>
               <p class="text-gray-600 uppercase text-xs">Analytics</p>
             </div>
           </div>
@@ -133,15 +115,8 @@
               <p class="leading-relaxed mb-3">Using R, I coded a R Markdown report that analyzed market performance and identified market trends through Standard and Poor's ETFs.</p>
               <div class="flex items-center flex-wrap ">
                 <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
-                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                    <circle cx="12" cy="12" r="3"></circle>
-                  </svg>200
                 </span>
                 <span class="text-gray-800 inline-flex items-center leading-none text-sm">
-                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                    <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
-                  </svg>0
                 </span>
               </div>
             </div>
@@ -156,15 +131,8 @@
               <p class="leading-relaxed mb-3">Using Jupyter Notebook, I wrangled and visualized order data. The project involved a Cohort Analysis, churn/retention calculations, and a Customer Lifetime Value Analysis.</p>
               <div class="flex items-center flex-wrap">
                 <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
-                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                    <circle cx="12" cy="12" r="3"></circle>
-                  </svg>162
                 </span>
                 <span class="text-gray-800 inline-flex items-center leading-none text-sm">
-                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                    <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
-                  </svg>0
                 </span>
               </div>
             </div>
@@ -179,15 +147,8 @@
               <p class="leading-relaxed mb-3">Through @DuneAnalytics, I used SQL to develop two web3 dashboards. The dashboards provide an overview of Decentralized Exchanges, OpenSea, and a collection of NFTs.</p>
               <div class="flex items-center flex-wrap ">
                 <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
-                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                    <circle cx="12" cy="12" r="3"></circle>
-                  </svg>201
                 </span>
                 <span class="text-gray-800 inline-flex items-center leading-none text-sm">
-                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                    <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
-                  </svg>0
                 </span>
               </div>
             </div>
