--- a/public/about.html
+++ b/public/about.html
@@ -43,10 +43,10 @@
               I’m a Data Analyst who specializes in exploratory data analysis, data visualization, and product analytics.  
                 <br>
                 <br>
-              Professional me aside, I'm active, a bit sarcastic, and I'm everything my caricature represents.
+              Outside of my career, I play in a soccer league, brew kombucha, and run. 
                 <br>
                 <br>
-              Let’s solve a problem, find value, and build something meaningful together!   
+              Let’s solve a problem and build something meaningful together!   
             </p>
             <div class="flex justify-center">
               <a href = "mailto: drewbyts@gmail.com" class="inline-flex text-gray-800 bg-yellow-300 border-0 py-2 px-6 mt-6 focus:outline-none rounded">EMAIL</a>
