--- a/public/about.html
+++ b/public/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
     <link rel="icon" type="image/png" href="./images/Button1.png"/>
-    <title>About</title>
+    <title>About | Data Analyst</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 </head>
 <body>
@@ -40,13 +40,13 @@
           </div>
           <div class="lg:flex-grow md:w-2/5 lg:pl-24 md:pt-0 pt-12 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <p class="leading-loose font-body"> 
-              I’m a Data Analyst who specializes in exploratory data analysis, data visualization, and product analytics.  
+              I’m a Data Analyst located in Sacramento, CA who specializes in exploratory data analysis, data visualization, and product analytics.  
                 <br>
                 <br>
               Outside of my career, I play in a soccer league, brew kombucha, and run. 
                 <br>
                 <br>
-              Let’s solve a problem and build something meaningful together!   
+              If you're a prospective employer, welcome. If you're looking for freelance work, email me!   
             </p>
             <div class="flex justify-center">
               <a href = "mailto: drewbyts@gmail.com" class="inline-flex text-gray-800 bg-yellow-300 border-0 py-2 px-6 mt-6 focus:outline-none rounded">EMAIL</a>
