--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <meta property='og:description' content='Drew'/>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="icon" type="image/png" href="./images/Button1.png"/>
-    <title>Drew</title>
+    <title>Drew | Data Analyst </title>
+    <meta name ="description" content="Data Analyst located in Sacramento, CA who specializes in exploratory data analysis, data visualization, and product analytics.">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 </head>
     
@@ -44,6 +45,7 @@
           </a>
       </figure>
       <h3 class="text-3xl text-center font-body text-gray-800 uppercase">Data Analyst</h3>
+      <h4 class = "text-lg text-center font-body text-gray-500 uppercase">Sacramento,CA</h4>
         <div class="lg:py-16">
           <!--<svg class="w-12 h-12" fill="black" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
