update page description

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property='og:title' content='Drew'/>
     <meta property='og:image' content='./images/Button1.png'/>
-    <meta property='og:description' content='Drew'/>
+    <meta property='og:description' content="Data Analyst located in Sacramento, CA who specializes in exploratory data analysis, data visualization, and analytics."/>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="icon" type="image/png" href="./images/Button1.png"/>
     <title>Drew | Data Analyst </title>
-    <meta name ="description" content="Data Analyst located in Sacramento, CA who specializes in exploratory data analysis, data visualization, and product analytics.">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 </head>
     
